# CellularAutomata

./: CMakeLists.txt  README.md  main.cpp
